test(docker): install 'ai' dependency in test container for compatibility tests
fix(test): increase docker test timeout and correct file paths
- Increases the timeout for the NPM compatibility test from 2 to 4 minutes to prevent failures during slow dependency installations in CI environments. - Fixes a path error where integration tests were incorrectly copied to the unit test directory within the container. - Expands the test command to run unit tests inside the container, improving test coverage.

fix: expose internal modules (VFS, Sandbox, Kernel) in main entry point

This resolves import errors in unit tests when running against the compiled package in Docker, verifying proper NPM compatibility.

--- a/.relay/transactions/91.yaml
+++ b/.relay/transactions/91.yaml
@@ -364,6 +364,6 @@ approved: true
 linesAdded: 5
 linesRemoved: 3
 linesDifference: 8
-gitCommittedAt: null
+gitCommittedAt: '2025-11-29T11:06:08.741Z'
 status: committed
 id: 91
