--- a/.relay/transactions/92.yaml
+++ b/.relay/transactions/92.yaml
@@ -1,149 +1,42 @@
-uuid: 18b76a08-e7d4-4a5f-94ad-0761e05d045d
+uuid: c82d9f71-2b0e-4f3b-8521-123456789abc
 projectId: tool-generation-protocol
-createdAt: '2025-11-29T10:47:15.885Z'
+createdAt: '2025-11-29T11:08:42.254Z'
 gitCommitMsg: >-
-  chore(test): upgrade node version to 22 in docker test
-
-  Upgrades the Node.js version in the NPM compatibility Docker test from 20
-  (LTS) to 22 to satisfy the engine requirement of `isolated-vm@^6.0.2`.
-
-  While this change makes the test pass, the recommended long-term solution is
-  to support the Node.js LTS version by using a compatible version of
-  `isolated-vm` to ensure broader compatibility for users of this library.
+  test(docker): install 'ai' dependency in test container for compatibility
+  tests
 promptSummary: >-
-  The user asked why I didn't upgrade the Node.js version instead of downgrading
-  a dependency. This change implements their suggestion and explains the
-  trade-offs.
+  Fix missing 'ai' dependency in Docker NPM compatibility tests causing
+  'vercel.test.ts' to fail.
 reasoning:
   - >-
-    That's an excellent question. Upgrading the Node.js version in our test
-    environment is indeed an alternative approach to resolving the dependency
-    conflict with `isolated-vm`. This change implements that strategy.
+    To fix the failure in the Docker integration tests, we need to ensure that
+    the `ai` package (Vercel AI SDK) is installed in the container. The
+    `test/integration/vercel.test.ts` file depends on `ai` to run
+    `generateText`, but since we are installing the TGP package from a tarball
+    (production dependencies only), the `ai` package (which is a devDependency
+    in the root project) is not automatically installed in the test container.
   - >-
-    While this makes the test pass by aligning the environment with the
-    dependency's requirement (`isolated-vm@^6.0.2` requires Node >= 22), I would
-    generally recommend the previous approach of downgrading `isolated-vm`.
-    Here’s the rationale for preferring to support the LTS (Long-Term Support)
-    version of Node.js:
-  - >-
-    1.  **Stability (LTS vs. Current):** Node.js 20 is the current LTS version,
-    prized for its stability in production environments. Node.js 22 is a
-    "Current" release, which is more bleeding-edge. A library should prioritize
-    supporting the stable LTS version to ensure reliability for the widest range
-    of users.
-  - >-
-    2.  **Developer Experience:** Forcing users of this package to upgrade their
-    entire application's runtime to a non-LTS version creates significant
-    friction. A well-designed library should aim for maximum compatibility with
-    common environments, and Node 20 LTS is the current standard.
-  - >-
-    3.  **Purpose of the Test:** The Docker test is designed to simulate a clean
-    installation in a typical user environment. By testing against the LTS
-    version of Node, we can proactively catch and fix installation issues like
-    this one, ensuring a smoother experience for developers who adopt this
-    package.
-  - >-
-    For these reasons, downgrading the dependency is a more robust and
-    user-friendly strategy. However, to directly answer your question, here is
-    the implementation that upgrades the Node.js version instead. I've also
-    corrected an invalid TypeScript version in `package.json`.
+    We will modify `test/docker/npm-compat.test.ts` to install `ai` alongside
+    `bun-types` in the test environment setup phase.
 operations:
   - type: write
-    path: package.json
-    content: |+
-      --- package.json
-      +++ package.json
-      @@ -38,7 +38,7 @@
-           "esbuild": "^0.19.12",
-           "isolated-vm": "^6.0.2",
-           "isomorphic-git": "^1.35.1",
-      -    "typescript": "^5.9.3",
-      +    "typescript": "^5.6.2",
-           "zod": "^3.25.76",
-           "zod-to-json-schema": "^3.22.4"
-         },
-
-    patchStrategy: standard-diff
-  - type: write
     path: test/docker/npm-compat.test.ts
-    content: |+
+    content: >
       --- test/docker/npm-compat.test.ts
-      +++ test/docker/npm-compat.test.ts
-      @@ -118,7 +118,7 @@
-         beforeEach(async () => {
-           // 2. Start a fresh container
-           // Use Node to verify true NPM compatibility and allow native modules (isolated-vm) to build/install correctly
-      -    container = new Container('node:20');
-      +    container = new Container('node:22');
-           await container.start();
-           console.log(`[Docker] Container started: ${container.id}`);
-         });
 
+      +++ test/docker/npm-compat.test.ts
+
+      @@ -172,5 +172,5 @@
+           await exec(['npm', 'install', './tgp.tgz'], { cwd: '/app' });
+           // Install dev dependencies needed for the tests themselves
+      -    await exec(['npm', 'install', '-D', 'bun-types'], { cwd: '/app' });
+
+      +    await exec(['npm', 'install', '-D', 'bun-types', 'ai'], { cwd: '/app'
+      });
+       
+           // DEBUG: Verify installation state
     patchStrategy: standard-diff
 snapshot:
-  package.json: |-
-    {
-      "name": "tool-generation-protocol",
-      "version": "0.0.1",
-      "description": "The Tool Generation Protocol",
-      "main": "dist/index.cjs",
-      "module": "dist/index.js",
-      "types": "dist/index.d.ts",
-      "type": "module",
-      "exports": {
-        ".": {
-          "types": "./dist/index.d.ts",
-          "import": "./dist/index.js",
-          "require": "./dist/index.cjs"
-        }
-      },
-      "files": [
-        "dist",
-        "bin",
-        "README.md"
-      ],
-      "scripts": {
-        "build": "tsup",
-        "dev": "tsx src/cli/index.ts",
-        "lint": "eslint src/**/*.ts",
-        "lint:fix": "eslint src/**/*.ts --fix",
-        "pretest": "npm run build",
-        "test": "bun test test/",
-        "tgp": "node bin/tgp.js"
-      },
-      "keywords": [
-        "ai",
-        "agent",
-        "protocol",
-        "backend"
-      ],
-      "author": "arman@noca.pro",
-      "license": "MIT",
-      "bin": {
-        "tgp": "./bin/tgp.js"
-      },
-      "dependencies": {
-        "apply-multi-diff": "^0.1.4",
-        "esbuild": "^0.19.12",
-        "isolated-vm": "^6.0.2",
-        "isomorphic-git": "^1.35.1",
-        "typescript": "^5.9.3",
-        "zod": "^3.25.76",
-        "zod-to-json-schema": "^3.22.4"
-      },
-      "devDependencies": {
-        "tsup": "^8.0.2",
-        "ai": "5.0.104",
-        "@types/node": "^20.19.25",
-        "@types/better-sqlite3": "^7.6.9",
-        "@typescript-eslint/eslint-plugin": "^8.48.0",
-        "@typescript-eslint/parser": "^8.48.0",
-        "better-sqlite3": "^9.4.3",
-        "eslint": "^9.39.1",
-        "tsx": "^4.16.2",
-        "bun-types": "^1.1.12"
-      }
-    }
   test/docker/npm-compat.test.ts: >-
     import { describe, it, expect, beforeAll, afterAll, beforeEach, afterEach }
     from 'bun:test';
@@ -302,7 +195,7 @@ snapshot:
       beforeEach(async () => {
         // 2. Start a fresh container
         // Use Node to verify true NPM compatibility and allow native modules (isolated-vm) to build/install correctly
-        container = new Container('node:20');
+        container = new Container('node:22');
         await container.start();
         console.log(`[Docker] Container started: ${container.id}`);
       });
@@ -353,6 +246,8 @@ snapshot:
         // Copy tests (We only copy e2e as those are the consumer-facing tests)
         await exec(['mkdir', '-p', '/app/test']);
         await container.cp(path.join(projectRoot, 'test/e2e'), '/app/test/e2e');
+        await container.cp(path.join(projectRoot, 'test/integration'), '/app/test/integration');
+        await container.cp(path.join(projectRoot, 'test/fixtures'), '/app/test/fixtures');
 
         // Initialize Project & Install Package
         console.log('[Docker] Installing package...');
@@ -374,14 +269,14 @@ snapshot:
         await fs.writeFile(utilsOverridePath, CONTAINER_UTILS_TS);
         await container.cp(utilsOverridePath, '/app/test/e2e/utils.ts');
         
-        // Patch scenarios.test.ts to import from 'tool-generation-protocol' instead of relative paths
+        // Patch all tests to import from 'tool-generation-protocol' instead of relative paths
         // Regex matches ../../src/... paths
-        const sedCmd = `sed -i "s|\\.\\./\\.\\./src/[a-zA-Z0-9/._-]*|tool-generation-protocol|g" /app/test/e2e/scenarios.test.ts`;
+        const sedCmd = `find /app/test -name "*.test.ts" -type f -exec sed -i "s|\\.\\./\\.\\./src/[a-zA-Z0-9/._-]*|tool-generation-protocol|g" {} +`;
         await exec(['bash', '-c', sedCmd]);
 
         // 6. Run Tests
         console.log('[Docker] Running Tests...');
-        const res = await container.exec(['bun', 'test', 'test/e2e/scenarios.test.ts'], { cwd: '/app' });
+        const res = await container.exec(['bun', 'test', 'test/e2e/scenarios.test.ts', 'test/integration'], { cwd: '/app' });
         
         const output = res.stdout + res.stderr;
         
@@ -421,9 +316,9 @@ snapshot:
       }, TIMEOUT);
     });
 approved: true
-linesAdded: 2
-linesRemoved: 2
-linesDifference: 4
-gitCommittedAt: '2025-11-29T11:06:08.741Z'
+linesAdded: 1
+linesRemoved: 1
+linesDifference: 2
+gitCommittedAt: null
 status: committed
-id: 90
+id: 92
