--- a/.relay/transactions/89.yaml
+++ b/.relay/transactions/89.yaml
@@ -370,6 +370,6 @@ approved: true
 linesAdded: 14
 linesRemoved: 6
 linesDifference: 20
-gitCommittedAt: null
+gitCommittedAt: '2025-11-29T11:06:08.741Z'
 status: committed
 id: 89
