feat: add governance and self-healing verification - Upgrade local git backend to support PR strategy (feature branches) - Update test utilities to support writeStrategy configuration - Add Gatekeeper Mode and Self-Healing loop scenarios
fix(tools): validation tool now detects syntax errors via parseDiagnostics

test: fix e2e self-healing scenario to use compliant constants

--- a/.relay/transactions/92.yaml
+++ b/.relay/transactions/92.yaml
@@ -319,6 +319,6 @@ approved: true
 linesAdded: 1
 linesRemoved: 1
 linesDifference: 2
-gitCommittedAt: null
+gitCommittedAt: '2025-11-29T11:38:36.322Z'
 status: committed
 id: 92
