--- a/.relay/transactions/93.yaml
+++ b/.relay/transactions/93.yaml
@@ -367,6 +367,6 @@ approved: true
 linesAdded: 4
 linesRemoved: 3
 linesDifference: 7
-gitCommittedAt: null
+gitCommittedAt: '2025-11-29T11:38:36.322Z'
 status: committed
 id: 93
