--- a/.relay/transactions/94.yaml
+++ b/.relay/transactions/94.yaml
@@ -109,6 +109,6 @@ approved: true
 linesAdded: 18
 linesRemoved: 0
 linesDifference: 18
-gitCommittedAt: null
+gitCommittedAt: '2025-11-29T11:38:36.322Z'
 status: committed
 id: 94
