test: verify README standards and capabilities - Added unit tests for static analysis (any, eval, secrets). - Added E2E test for Unified Diff in Scenario 3. - Added E2E tests for Strict Typing and Statelessness in Scenario 11. - Added E2E Scenario 14 for VFS Write Protection.

--- a/.relay/transactions/95.yaml
+++ b/.relay/transactions/95.yaml
@@ -1588,6 +1588,6 @@ approved: true
 linesAdded: 114
 linesRemoved: 13
 linesDifference: 127
-gitCommittedAt: null
+gitCommittedAt: '2025-11-29T11:47:56.821Z'
 status: committed
 id: 95
