--- a/.relay/transactions/96.yaml
+++ b/.relay/transactions/96.yaml
@@ -188,6 +188,6 @@ approved: true
 linesAdded: 10
 linesRemoved: 0
 linesDifference: 10
-gitCommittedAt: null
+gitCommittedAt: '2025-11-29T11:47:56.821Z'
 status: committed
 id: 96
